--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+/* 
+#E075F0
+#60D9F0
+
+#5A5AE0
+#304E78
+#2F1A4A
+ */
+
+
+.ChartContainer {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.FocusedChart {
+    width:60%;
+    height:100%;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.UnfocusedCharts {
+    width:20%;
+    height:100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.IterationContainer {
+    display: flex;
+    width: 60%;
+    margin-left: 10%;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+Button {
+    color: #FFFFFF;
+    padding:0.35em 1.2em;
+    border-width: 0.1em;
+    background-color: #304E78;
 }
